--- a/css/style.css
+++ b/css/style.css
@@ -21,19 +21,21 @@ li {
 
 
 .board {
-    height: 300px;
-    width: 300px;
+    height: 288px;
+    width: 281px;
     background-color: grey;
     border: 5px solid black;
     border-radius: 5px;
 }
 
 
-.grid {
+section button {
     height: 35px;
     width: 35px;
     background-color: lightgray;
 }
+
+
 
 .safe {
     background-color: lightgreen;
