placed numbers in mineField, changed classes for clicked buttons, cleaned up code

--- a/css/style.css
+++ b/css/style.css
@@ -38,5 +38,9 @@ section button {
 
 
 .safe {
-    background-color: lightgreen;
+    background-color: grey;
+}
+
+.danger {
+    background-color: red;
 }
