trying to finish left click logic

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ section button {
     transform: translateY(-10px);
 }
 
+.empty-safe {
+    background-color: grey;
+}
+
 .danger {
     background-color: red;
 }
