--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap');
 
 body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: rgb(35, 35, 35);
 }
 
 header {
@@ -12,8 +14,15 @@ header {
     justify-content: space-between;
 }
 
+h1 {
+    text-shadow: -3px 3px 0 darkred;
+    font-family: 'Bungee Inline';
+    color: lightgrey
+}
+
 ul {
     justify-content: space-between;
+    transform: translateX(30px);
 
 }
 
@@ -22,9 +31,10 @@ li {
 
 }
 
-#results {
-    border: 3px solid grey;
+#results, #reset {
+    border: 1px solid darkred;
     border-radius: 3px;
+    background-color: lightgrey;
 }
 
 
@@ -32,7 +42,7 @@ li {
     height: 288px;
     width: 281px;
     background-color: grey;
-    border: 5px solid black;
+    border: 5px solid darkgray;
     border-radius: 5px;
 }
 
@@ -57,4 +67,8 @@ section button {
 
 .danger {
     background-color: red;
+    background-image: url(../imgs/mine.png);
+    background-size: cover;
+    background-position-y: -5px;
+
 }
